fix(chat-bubbles/fonts): Prevent text cutting in user edit state
- Applied consistent font-size and line-height styles to the mirror text element in the user edit state of chat messages.
- Ensured that the text is fully visible and not cut off during the editing process.

Changes summary:
- Resolved an issue where text in the user edit state of chat messages was being cut off due to inconsistent styling. Now, the mirror text element matches the styling, preventing text truncation during editing.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -209,6 +209,7 @@ main [role='presentation'] {
 		@extend %animFadeIn;
 
 		/* Make the text in edit textarea to be the full-width */
+		span.invisible,
 		textarea {
 			line-height: calc(var(--lineHeight) / 16) !important;
 			font-size: calc((var(--fontSize) / 16) * 1rem) !important;
